Fixed Button wrapping and title size.

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -21,6 +21,7 @@ body {
     font-weight: 500;
     text-decoration: none;
     font-size: 0.8rem;
+    white-space: nowrap
 }
 
 .button-disabled {
